--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
     content="Have a routine payment? This app saves you the stress of manually sending money and does it on a set basis." />
-
+    <link rel="shortcut icon" href="%PUBLIC_URL%/icon.png">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <title>Repify</title>
 </head>
 
