fixed codacy flagged issues

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     content="Have a routine payment? This app saves you the stress of manually sending money and does it on a set basis." />
     <link rel="shortcut icon" href="%PUBLIC_URL%/icon.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <title>Repify</title>
 </head>
 
